Fix #2334 : Contraste sur les boutons de stylisation d'un message

--- a/assets/scss/components/_editor.scss
+++ b/assets/scss/components/_editor.scss
@@ -10,7 +10,6 @@
         display: block;
         float: left;
         cursor: pointer;
-        background-color: #FFF;
         border-bottom: 1px solid transparent;
         text-decoration: none;
         color: #999;
